--- a/alembic.ini
+++ b/alembic.ini
@@ -29,7 +29,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://renaissanceman:reddecemberwindows@localhost/renaissance
+sqlalchemy.url = postgresql+psycopg2://renaissanceman:reddecemberwindows@localhost:5432/renaissance
 
 
 # Logging configuration
