--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+Mako==1.0.0
+MarkupSafe==0.23
 SQLAlchemy==0.9.8
-backports.ssl-match-hostname==3.4.0.2
-certifi==14.05.14
-clang==3.3
-psycopg2==2.5.4
-tornado==4.0.2
-wsgiref==0.1.2
-simplejson==3.6.5
-geopy==1.4.0
 alembic==0.7.1
-pytz==2014.10
-dictalchemy==0.1.2.6
+amqp==1.4.6
+anyjson==0.3.3
+backports.ssl-match-hostname==3.4.0.2
+billiard==3.3.0.19
+celery==3.1.17
+certifi==14.05.14
 cryptacular==1.4.1
+dictalchemy==0.1.2.6
+kombu==3.0.24
 pbkdf2==1.3
-redis==2.10.3
+pika==0.9.14
+psycopg2==2.5.4
 pyotp==1.4.1
+pytz==2014.10
+redis==2.10.3
+tornado==4.0.2
+tornado-celery==0.3.4
+ujson==1.33
+wsgiref==0.1.2
