adding nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -70,6 +70,14 @@
 			ssl_client_certificate /home/ubuntu/certs/ca.pem;
 			ssl_verify_client off;
 
+			upstream admin {
+				server 127.0.0.1:8888;
+			}
+
+			upstream search {
+				server 127.0.0.1:8889;
+			}
+
 			location /admin/ {
 				proxy_pass_header Server;
 				proxy_set_header Host $http_host;
@@ -79,7 +87,7 @@
 				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 				proxy_connect_timeout 100;
 				proxy_read_timeout 100;
-				proxy_pass http://localhost:8888/;
+				proxy_pass http://admin;
 			}
 
 			location /search/ {
@@ -91,7 +99,7 @@
 				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 				proxy_connect_timeout 100;
 				proxy_read_timeout 100;
-				proxy_pass http://localhost:8889/;
+				proxy_pass http://search;
 			}
 
 		}
