changing nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -69,7 +69,7 @@
               root   html;
             }
 
-            location /admin/ {
+            location /api/ {
 				proxy_pass_header Server;
 				proxy_set_header Host $http_host;
 				proxy_redirect off;
