--- a/nginx.conf
+++ b/nginx.conf
@@ -1,114 +1,147 @@
-   #user  nobody;
-    worker_processes  1;
+#user  nobody;
+worker_processes  1;
 
 
-    error_log  /var/log/nginx/error.log;
-    events {
-        worker_connections  1024;
-    }
+error_log  /var/log/nginx/error.log;
+events {
+	worker_connections  1024;
+}
 
 
-    http {
-        include       mime.types;
-       # include /usr/local/nginx/sites-enabled;
-        default_type  application/octet-stream;
+http {
+	include       mime.types;
+   # include /usr/local/nginx/sites-enabled;
+	default_type  application/octet-stream;
 
 
-        sendfile        on;
-        keepalive_timeout  65;
+	sendfile        on;
+	keepalive_timeout  65;
 
-		upstream admin {
-			server 127.0.0.1:8888;
-		}
-
-		upstream search {
-			server 127.0.0.1:8889;
-		}
-
-        server {
-
-			listen 443 ssl;
-			server_name	accurox.com;
-
-			access_log /var/log/nginx/access.log;
-
-			ssl_certificate /home/ubuntu/certs/accurox.com.cert;
-			ssl_certificate_key /home/ubuntu/certs/accurox.com.key;
-			ssl_client_certificate /home/ubuntu/certs/ca.pem;
-			ssl_verify_client off;
-
-
-            location / {
-                root /opt/rmen/dist/;
-                index index.html;
-            }
-
-            location /scripts/ {
-               root   /opt/rmen/dist/;
-
-            }
-
-            location /bower_components/ {
-               root   /opt/rmen/dist/;
-            }
-
-            location /images/ {
-               root   /opt/rmen/dist/;
-            }
-
-            location /styles/ {
-               root   /opt/rmen/dist/;
-            }
-
-            location /views/ {
-               root   /opt/rmen/dist/;
-            }
-
-            error_page 500 502 503 504  /50x.html;
-            location = /50x.html {
-              root   html;
-            }
-
-            location /api/ {
-				proxy_pass_header Server;
-				proxy_set_header Host $http_host;
-				proxy_redirect off;
-				proxy_set_header X-Real-IP $remote_addr;
-				proxy_set_header X-Scheme $scheme;
-				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-				proxy_connect_timeout 100;
-				proxy_read_timeout 100;
-				proxy_pass http://admin;
-			}
-
-			location /search/ {
-				proxy_pass_header Server;
-				proxy_set_header Host $http_host;
-				proxy_redirect off;
-				proxy_set_header X-Real-IP $remote_addr;
-				proxy_set_header X-Scheme $scheme;
-				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-				proxy_connect_timeout 100;
-				proxy_read_timeout 100;
-				proxy_pass http://search;
-			}
-
-    	}
-
-    	server {
-			listen 80 default_server;
-			listen 443 default_server;
-			server_name "_";
-			access_log off;
-
-			ssl_certificate /home/ubuntu/certs/accurox.com.cert;
-			ssl_certificate_key /home/ubuntu/certs/accurox.com.key;
-
-			if ($scheme = http) {
-				rewrite ^ https://$host$request_uri permanent;
-			}
-			if ($scheme = https) {
-				return 444;
-			}
-		}
+	upstream admin {
+		server 127.0.0.1:8888;
 	}
+
+	upstream search {
+		server 127.0.0.1:8889;
+	}
+
+	server {
+
+		#listen 443 ssl;
+		#server_name	accurox.com;
+		listen 80;
+		server_name localhost;
+
+		access_log /var/log/nginx/access.log;
+
+		#ssl_certificate /home/ubuntu/certs/accurox.com.cert;
+		#ssl_certificate_key /home/ubuntu/certs/accurox.com.key;
+		#ssl_client_certificate /home/ubuntu/certs/ca.pem;
+		#ssl_verify_client off;
+
+
+		location / {
+			root /opt/rmen/dist/;
+			index index.html;
+		}
+
+		location /scripts/ {
+		   root   /opt/rmen/dist/;
+
+		}
+
+		location /bower_components/ {
+		   root   /opt/rmen/dist/;
+		}
+
+		location /images/ {
+		   root   /opt/rmen/dist/;
+		}
+
+		location /styles/ {
+		   root   /opt/rmen/dist/;
+		}
+
+		location /views/ {
+		   root   /opt/rmen/dist/;
+		}
+
+		error_page 500 502 503 504  /50x.html;
+		location = /50x.html {
+		  root   html;
+		}
+
+		# restrict request body do 10 MB
+		client_max_body_size 10M;
+
+		# possible urls
+		# /api/serviceprovider/id/upload --> admin
+		# /api/serviceuser/id/upload
+		location ~* /api/(serviceprovider|serviceuser)(/\d+)?/upload$ {
+			upload_pass @after_upload;
+
+			# Store files to this directory
+			upload_store /tmp/uploads;
+
+			# Allow uploaded files to be world readable
+			upload_store_access user:rw group:rw all:r;
+
+			# Set specified fields in request body
+			upload_set_form_field $upload_field_name.name $upload_file_name;
+			upload_set_form_field $upload_field_name.content_type $upload_content_type;
+			upload_set_form_field $upload_field_name.path $upload_tmp_path;
+
+			# Inform backend about hash and size of a file
+			upload_aggregate_form_field $upload_field_name.md5 $upload_file_md5;
+			upload_aggregate_form_field $upload_field_name.size $upload_file_size;
+
+			upload_cleanup 200 400 404 499 500-505;
+		}
+
+		location @after_upload {
+			proxy_pass   http://admin;
+		}
+
+		location /api/search/ {
+			proxy_pass_header Server;
+			proxy_set_header Host $http_host;
+			proxy_redirect off;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Scheme $scheme;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_connect_timeout 100;
+			proxy_read_timeout 100;
+			proxy_pass http://search;
+		}
+
+		location /api/ {
+			proxy_pass_header Server;
+			proxy_set_header Host $http_host;
+			proxy_redirect off;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Scheme $scheme;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_connect_timeout 100;
+			proxy_read_timeout 100;
+			proxy_pass http://admin;
+		}
+
+	}
+
+	server {
+		listen 80 default_server;
+		#listen 443 default_server;
+		server_name "_";
+		access_log off;
+
+		#ssl_certificate /home/ubuntu/certs/accurox.com.cert;
+		#ssl_certificate_key /home/ubuntu/certs/accurox.com.key;
+
+		#if ($scheme = http) {
+		#	rewrite ^ https://$host$request_uri permanent;
+		#}
+		#if ($scheme = https) {
+			return 444;
+		#}
+	}
+}
