--- a/nginx.conf
+++ b/nginx.conf
@@ -27,17 +27,20 @@ http {
 
 	server {
 
-		#listen 443 ssl;
-		#server_name	accurox.com;
-		listen 80;
-		server_name localhost;
+		listen 443 ssl;
+		server_name	sevame.in;
+		server_name www.sevame.in;
+		#listen 80;
+		#server_name localhost;
 
 		access_log /var/log/nginx/access.log;
 
-		#ssl_certificate /home/ubuntu/certs/accurox.com.cert;
-		#ssl_certificate_key /home/ubuntu/certs/accurox.com.key;
-		#ssl_client_certificate /home/ubuntu/certs/ca.pem;
-		#ssl_verify_client off;
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_certificate /home/ubuntu/certs/sevame.in.inter.cert;
+		ssl_certificate_key /home/ubuntu/certs/sevame.in.key;
+		ssl_client_certificate /home/ubuntu/certs/ca.pem;
+
+		ssl_verify_client off;
 
 
 		location / {
@@ -130,18 +133,18 @@ http {
 
 	server {
 		listen 80 default_server;
-		#listen 443 default_server;
+		listen 443 default_server;
 		server_name "_";
 		access_log off;
 
-		#ssl_certificate /home/ubuntu/certs/accurox.com.cert;
-		#ssl_certificate_key /home/ubuntu/certs/accurox.com.key;
+		ssl_certificate /home/ubuntu/certs/sevame.in.inter.cert;
+		ssl_certificate_key /home/ubuntu/certs/sevame.in.key;
 
-		#if ($scheme = http) {
-		#	rewrite ^ https://$host$request_uri permanent;
-		#}
-		#if ($scheme = https) {
+		if ($scheme = http) {
+			rewrite ^ https://$host$request_uri permanent;
+		}
+		if ($scheme = https) {
 			return 444;
-		#}
+		}
 	}
 }
