--- a/nginx.conf
+++ b/nginx.conf
@@ -10,9 +10,17 @@ events {
 
 http {
 	include       mime.types;
-   # include /usr/local/nginx/sites-enabled;
+   	#include /usr/local/nginx/sites-enabled;
 	default_type  application/octet-stream;
 
+	gzip on;
+	gzip_disable "msie6";
+
+	gzip_comp_level 6;
+	gzip_min_length  1100;
+	gzip_buffers 16 8k;
+	gzip_proxied any;
+	gzip_types text/plain text/css text/javascript application/javascript application/json;
 
 	sendfile        on;
 	keepalive_timeout  65;
