adding expires headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -54,27 +54,46 @@ http {
 		location / {
 			root /opt/rmen/dist/;
 			index index.html;
+			expires 3d;
+			add_header Pragma public;
+			add_header Cache-Control "public";
 		}
 
 		location /scripts/ {
-		   root   /opt/rmen/dist/;
+		   	root   /opt/rmen/dist/;
+		   	expires 3d;
+			add_header Pragma public;
+			add_header Cache-Control "public";
 
 		}
 
 		location /bower_components/ {
-		   root   /opt/rmen/dist/;
+		   	root   /opt/rmen/dist/;
+		   	expires 3d;
+			add_header Pragma public;
+			add_header Cache-Control "public";
 		}
 
 		location /images/ {
-		   root   /opt/rmen/dist/;
+		   	root   /opt/rmen/dist/;
+		   	expires 3d;
+			add_header Pragma public;
+			add_header Cache-Control "public";
+
 		}
 
 		location /styles/ {
-		   root   /opt/rmen/dist/;
+		   	root   /opt/rmen/dist/;
+		   	expires 3d;
+			add_header Pragma public;
+			add_header Cache-Control "public";
 		}
 
 		location /views/ {
-		   root   /opt/rmen/dist/;
+		   	root   /opt/rmen/dist/;
+		   	expires 3d;
+			add_header Pragma public;
+			add_header Cache-Control "public";
 		}
 
 		error_page 500 502 503 504  /50x.html;
