--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,6 @@ http {
 
 		listen 443 ssl;
 		server_name	sevame.in;
-		server_name www.sevame.in;
 		#listen 80;
 		#server_name localhost;
 
@@ -156,6 +155,20 @@ http {
 			proxy_pass http://admin;
 		}
 
+	}
+
+	server {
+		listen 443 ssl;
+		server_name  www.sevame.in;
+
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_certificate /home/ubuntu/certs/sevame.in.inter.cert;
+		ssl_certificate_key /home/ubuntu/certs/sevame.in.key;
+		ssl_client_certificate /home/ubuntu/certs/ca.pem;
+
+		ssl_verify_client off;
+
+		return 301 https://sevame.in$request_uri;
 	}
 
 	server {
